Update UserMgt Service-builde

--- a/modules/backend-usermgt/backend-usermgt-service/src/main/resources/service.properties
+++ b/modules/backend-usermgt/backend-usermgt-service/src/main/resources/service.properties
@@ -12,7 +12,7 @@
 ## Build
 ##
 
-    build.namespace=M_UserMgt
-    build.number=1
-    build.date=1500947559517
+    build.namespace=UserMgt
+    build.number=3
+    build.date=1504597886764
     build.auto.upgrade=true
