DB, REST - Applicant

--- a/modules/backend-datamgt/backend-datamgt-service/src/main/resources/service.properties
+++ b/modules/backend-datamgt/backend-datamgt-service/src/main/resources/service.properties
@@ -12,7 +12,7 @@
 ## Build
 ##
 
-    build.namespace=M_DataMgt
-    build.number=219
-    build.date=1500283008635
+    build.namespace=DataMgt
+    build.number=1
+    build.date=1504869045716
     build.auto.upgrade=true
