--- a/modules/backend-usermgt/backend-usermgt-service/build.gradle
+++ b/modules/backend-usermgt/backend-usermgt-service/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
+	compileOnly project(":modules:backend-communication:backend-communication-api")
 	
 	compileOnly project(":modules:backend-auth")
 	
