update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,11 @@ themes/
 test-results
 gradle-local.properties
 **/.DS_Store
+
+**/backend-dossiermgt-api/*
+**/!backend-dossiermgt-api/*                                                                 
+ 
+
 modules/backend-datamgt/backend-datamgt-api/src/main/java/**
 modules/backend-datamgt/backend-datamgt-service/src/main/java/org/opencps/datamgt/model/
 modules/backend-datamgt/backend-datamgt-service/src/main/java/org/opencps/datamgt/service/base/
