--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -8,6 +8,10 @@ dependencies {
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-auth")
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	
+	compile group: 'net.sf.jasperreports', name: 'jasperreports', version: '5.2.0'
+	compile group: 'net.sf.jasperreports', name: 'jasperreports-fonts', version: '5.6.1'
+	compile group: 'org.olap4j', name: 'olap4j', version: '1.2.0',transitive: false
 }
 
 buildService {
