commit to merge

--- a/modules/frontend-web-admin/build.gradle
+++ b/modules/frontend-web-admin/build.gradle
@@ -13,5 +13,8 @@ dependencies {
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")
 	
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	
 	compileOnly project(":modules:backend-auth")
 }
