--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 #liferay.workspace.environment=local
 #liferay.workspace.home.dir=bundles
 #liferay.workspace.modules.default.repository.enabled=false
-#liferay.workspace.modules.dir=modules
+liferay.workspace.modules.dir=modules
 #liferay.workspace.plugins.sdk.dir=plugins-sdk
 #liferay.workspace.themes.dir=themes
 #liferay.workspace.wars.dir=wars
