--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@
 #liferay.workspace.home.dir=bundles
 #liferay.workspace.modules.default.repository.enabled=false
 liferay.workspace.modules.dir=modules
-#liferay.workspace.plugins.sdk.dir=plugins-sdk
-#liferay.workspace.themes.dir=themes
+liferay.workspace.plugins.sdk.dir=mt-dklr
+liferay.workspace.themes.dir=themes
 #liferay.workspace.wars.dir=wars
 
 microsoft.translator.client.id=
