--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@ gradle-local.properties
 **/backend-dossiermgt-api/**/exception/
 **/backend-dossiermgt-api/**/service/
 **/backend-dossiermgt-api/**/service/persistence/
+
+**/vr-business/**
+**/vr-rest/**
+mt-dklr/**
+
