--- a/modules/frontend-web-customer/build.gradle
+++ b/modules/frontend-web-customer/build.gradle
@@ -9,4 +9,5 @@ dependencies {
 	
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 }
