--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #liferay.workspace.bundle.url=https://cdn.lfrs.sl/releases.liferay.com/portal/7.0.2-ga3/liferay-ce-portal-tomcat-7.0-ga3-20160804222206210.zip
 #liferay.workspace.environment=local
-#liferay.workspace.home.dir=bundles
+liferay.workspace.home.dir=liferay-ce-portal-7.0-ga4
 #liferay.workspace.modules.default.repository.enabled=false
 #liferay.workspace.modules.dir=modules
 #liferay.workspace.plugins.sdk.dir=mt-dklr
