--- a/modules/frontend-web-admin/build.gradle
+++ b/modules/frontend-web-admin/build.gradle
@@ -16,5 +16,8 @@ dependencies {
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	
+	compileOnly project(":modules:backend-communication:backend-communication-api")
+	compileOnly project(":modules:backend-communication:backend-communication-service")
+	
 	compileOnly project(":modules:backend-auth")
 }
