--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-communication:backend-communication-service")
+	compileOnly project(":modules:backend-kyso-process:backend-kyso-process-api")
+	compileOnly project(":modules:backend-kyso-process:backend-kyso-process-service")
 	
 	compileOnly project(":modules:backend-auth")
 	
