--- a/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
+++ b/modules/backend-kyso-process/backend-kyso-process-service/build.gradle
@@ -6,6 +6,8 @@ dependencies {
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly project(":modules:backend-kyso-process:backend-kyso-process-api")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
+	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	
 	compile name : "vgca.svrsigner"
 	compile name : "bcpkix"
