--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	compileOnly project(":modules:backend-auth")
 	
+	testCompile group: "junit", name: "junit", version: "4.12"
 }	
 
 buildService {
