--- a/modules/backend-api-rest/build.gradle
+++ b/modules/backend-api-rest/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	
 	compileOnly project(":modules:backend-auth")
 	
-	
+	testCompile group: "junit", name: "junit", version: "4.12"
 }	
 
 sourceSets {
