--- a/modules/backend-synchronization/backend-synchronization-service/build.gradle
+++ b/modules/backend-synchronization/backend-synchronization-service/build.gradle
@@ -9,6 +9,11 @@ dependencies {
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-service")	
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-communication:backend-communication-service")	
+	compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
+	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
+    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.1'
+    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.5'
+    compile group: 'commons-io', name: 'commons-io', version: '2.0.1'		
 }
 
 buildService {
