--- a/modules/frontend-homepage/build.gradle
+++ b/modules/frontend-homepage/build.gradle
@@ -7,3 +7,7 @@ dependencies {
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
 }
+apply plugin: "java"
+tasks.withType(JavaCompile) {
+  options.encoding = "UTF-8"
+}
