--- a/modules/backend-api-rest-v2-1/build.gradle
+++ b/modules/backend-api-rest-v2-1/build.gradle
@@ -17,4 +17,5 @@ dependencies {
 	
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
+	compileOnly project(":modules:backend-auth")
 }
