--- a/modules/swagger-generate/src/main/resources/opencps.yaml
+++ b/modules/swagger-generate/src/main/resources/opencps.yaml
@@ -19,7 +19,13 @@ tags:
   description: Định nghĩa các bước xử lý chuẩn dùng để hiển thị trên menu xử lý của chương trình
 - name: StepConfig
   description: Định nghĩa các bước xử lý chuẩn dùng để hiển thị trên menu xử lý của chương trình
-  
+- name: DocumentTypes
+  description: API process DocumentTypes
+- name: DossierDocuments
+  description: API process DossierDocuments
+- name: DossierSync
+  description: API process DossierSync
+
 paths:
   /actionconfigs:
     post:
@@ -500,6 +506,225 @@ paths:
             $ref: '#/definitions/StepConfigItemResult'
         400:
           description: Tham số truyền vào không hợp lệ
+# List API of DocumentType
+  /documenttypes:
+    get:
+      tags:
+      - DocumentTypes
+      summary: Get all list DocumentTypes
+      operationId: getAllDocumentTypes
+      description: Get all list DocumentTypes
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+        - $ref: '#/parameters/keyword'
+        - $ref: '#/parameters/start'
+        - $ref: '#/parameters/end'
+      responses:
+        200:
+          description: get list DocumentTypes is success
+          schema:
+            $ref: '#/definitions/DocumentTypeResultModel'
+        400:
+          description: Params tranfer is not valid
+    post:
+      tags:
+      - DocumentTypes
+      summary: Create DocumentType
+      operationId: createDocumentType
+      description: Insert record DocumentType in database
+      consumes:
+      - application/json
+      - application/xml
+      - application/x-www-form-urlencoded
+      produces:
+      - application/json
+      - application/xml
+      - application/x-www-form-urlencoded
+      parameters:
+      - name: input
+        in: body
+        description: input form parameters
+        schema:
+          $ref: '#/definitions/DocumentTypeInputModel'
+      responses:
+        200:
+          description: Create record DocumentType is success
+          schema:
+            $ref: '#/definitions/DocumentTypeModel'
+        400:
+          description: Create DocumentType is false
+  /documenttypes/{id}:
+    get:
+      tags:
+      - DocumentTypes
+      summary: Get DocumentType by id or code
+      operationId: getDocById
+      description: Get DocumentType by id or code
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      produces:
+      - applicantion/json
+      - applicantion/xml
+      parameters:
+        - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: Get info DocumentType
+          schema:
+            $ref: '#/definitions/DocumentTypeModel'
+        400:
+          description: Get DocumentType is not valid
+    put:
+      tags:
+      - DocumentTypes
+      summary: Update DocumentType by id
+      operationId: updateDocById
+      description: Update DocumentType by id
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      - application/x-www-form-urlencoded
+      produces:
+      - applicantion/json
+      - applicantion/xml
+      - application/x-www-form-urlencoded
+      parameters:
+        - $ref: '#/parameters/id'
+        - in: body
+          name: input
+          description: Param input update 
+          schema:
+            $ref: '#/definitions/DocumentTypeInputModel'
+      responses:
+        200:
+          description: Info DocumentType was updated
+          schema:
+            $ref: '#/definitions/DocumentTypeModel'
+        400:
+          description: DocumentType is not update
+    delete:
+      tags:
+      - DocumentTypes
+      summary: Delete DocumentType by id
+      operationId: removeDocById
+      description: Delete DocumentType by id
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      produces:
+      - applicantion/json
+      - applicantion/xml
+      parameters:
+        - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: Info DocumentType was delete
+          schema:
+            $ref: '#/definitions/DocumentTypeModel'
+        400:
+          description: DocumentType is not delete
+# List API DossierDocument
+  /dossiers/{id}/documents:
+    get:
+      tags:
+      - DossierDocuments
+      summary: Get list documents of dossierId
+      operationId: getDocumentList
+      description: Get list documents of dossierId
+      consumes:
+      - application/json
+      - application/xml
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+        - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: List info Document by dossierId
+          schema:
+            $ref: '#/definitions/DossierDocumentResultModel'
+        400:
+          description: DossierDocument has not data
+  /dossiers/{id}/documents/{typeCode}:
+    get:
+      tags:
+      - DossierDocuments
+      summary: Download file document by typeCode
+      operationId: downloadDocumentByTypeCode
+      description: Download file document by typeCode
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      produces:
+      - applicantion/json
+      - applicantion/xml
+      parameters:
+        - $ref: '#/parameters/id'
+        - $ref: '#/parameters/typeCode'
+      responses:
+        200:
+          description: Download file is success
+        400:
+          description: Download file is false
+#List API DossierSync
+  /dossiers/{id}/syncs:
+    get:
+      tags:
+      - DossierSync
+      summary: Read info exchange on dossier
+      operationId: getSyncByDossierId
+      description: Read info exchange on dossier
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      produces:
+      - applicantion/json
+      - applicantion/xml
+      parameters:
+        - $ref: '#/parameters/model'
+        - $ref: '#/parameters/id'
+        - $ref: '#/parameters/start'
+        - $ref: '#/parameters/end'
+      responses:
+        200:
+          description: Get list dossierSync is success
+          schema:
+            $ref: '#/definitions/DossierSyncResultModel'
+        400:
+          description: Get list dossierSync is not success
+  /dossiersyncs:
+    get:
+      tags:
+      - DossierSync
+      summary: Get list all dossierSync
+      operationId: getDossierSyncList
+      description: Get list all dossierSync
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      produces:
+      - applicantion/json
+      - applicantion/xml
+      parameters:
+        - $ref: '#/parameters/action'
+        - $ref: '#/parameters/top'
+        - $ref: '#/parameters/start'
+        - $ref: '#/parameters/end'
+      responses:
+        200:
+          description: Get list dossierSync is success
+          schema:
+            $ref: '#/definitions/DossierSyncResultModel'
+        400:
+          description: Get list dossierSync is not success
+# Define model
 definitions:
   ActionConfigItemResult:
     type: object
@@ -690,6 +915,293 @@ definitions:
       counter:
         type: integer
         format: int64
+# Model entity DocumentType
+  DocumentTypeResultModel:
+    type: object
+    required:
+    - total
+    properties:
+      total:
+        type: integer
+        format: int32
+        example: 0
+      data:
+        type: array
+        items:
+          $ref: "#/definitions/DocumentTypeModel"
+  DocumentTypeModel:
+    type: object
+    required:
+    - documentTypeId
+    properties:
+      documentTypeId:
+        type: integer
+        format: int64
+        example: 0
+      groupId:
+        type: integer
+        format: int64
+        example: 0
+      userId:
+        type: integer
+        format: int64
+        example: 0
+      createDate:
+        type: string
+        format: date-time
+#        pattern: '\d{4}-\d{1,2}-\d{1,2} \d{1,2}:\d{1,2}:\d{1,2}'
+        example: "2016-04-16T16:06:05Z"
+      modifiedDate:
+        type: string
+        format: date-time
+#        pattern: '\d{4}-\d{1,2}-\d{1,2} \d{1,2}:\d{1,2}:\d{1,2}'
+        example: "2016-04-16T16:06:05Z"
+      typeCode:
+        type: string
+        example: "1100"
+      templateClass:
+        type: integer
+        format: int32
+        example: 0
+      documentName:
+        type: string
+        example: "Thông tin tài khoản"
+      documentScript:
+        type: string
+        example: "<jasper></jasper>"
+      codePattern:
+        type: string
+        example: "Ma hoa tai lieu"
+      docSync:
+        type: integer
+        format: int32
+        example: 0
+  DocumentTypeSearchModel:
+    type: object
+    properties:
+      keyword:
+        type: string
+        example: "key search"
+      start:
+        type: integer
+        format: int32
+        example: 0
+      end:
+        type: integer
+        format: int32
+        example: 15
+      sort:
+        type: string
+        example: "field sort"
+      order:
+        type: string
+        example: "field order"
+  DocumentTypeInputModel:
+    type: object
+    required:
+    - typeCode
+    properties:
+      typeCode:
+        type: string
+        example: "1110"
+      templateClass:
+        type: integer
+        format: int32
+        example: 0
+      documentName:
+        type: string
+        example: "Name of document"
+      codePattern:
+        type: string
+        example: "Partten of code"
+      documentScript:
+        type: string
+        example: "Script of document"
+      docSync:
+        type: integer
+        format: int32
+        example: 0
+# Document Model
+  DossierDocumentResultModel:
+    type: object
+    required:
+    - total
+    properties:
+      total:
+        type: integer
+        format: int64
+        example: 0
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/DossierDocumentModel'
+  DossierDocumentModel:
+    type: object
+    required:
+    - dossierDocumentId
+    properties:
+      dossierDocumentId:
+        type: integer
+        format: int64
+        example: 0
+      createDate:
+        type: string
+        format: date-time
+        example: "2016-04-16T16:06:05Z"
+      modifiedDate:
+        type: string
+        format: date-time
+        example: "2016-04-16T16:06:05Z"
+      dossierId:
+        type: integer
+        format: int64
+        example: 0
+      dossierActionId:
+        type: integer
+        format: int64
+        example: 0
+      documentType:
+        type: string
+        example: type of document
+      documentName:
+        type: string
+        example: Name of document
+      documentCode:
+        type: string
+        example: code of document
+      docSync:
+        type: integer
+        format: int32
+        example: 0
+      fileSize:
+        type: integer
+        format: int32
+        example: 10
+      fileType:
+        type: string
+        example: type of file
+      documentFileId:
+        type: integer
+        format: int64
+        example: 0
+# DossierSync Model
+  DossierSyncResultModel:
+    type: object
+    required:
+    - total
+    properties:
+      total:
+        type: integer
+        format: int32
+        example: 0
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/DossierSyncModel'
+  DossierSyncModel:
+    type: object
+    required:
+    - dossierSyncId
+    properties:
+      dossierSyncId:
+        type: integer
+        format: int64
+        example: 0
+      userId:
+        type: integer
+        format: int64
+        example: 0
+      createDate:
+        type: string
+        format: date-time
+        example: "2016-04-16T16:06:05Z"
+      modifiedDate:
+        type: string
+        format: date-time
+        example: "2016-04-16T16:06:05Z"
+      dossierRefUid:
+        type: string
+        example: referenceUid of dossier
+      syncRefUid:
+        type: string
+        example: referenceUid of dossierSync
+      actionCode:
+        type: string
+        example: code of dossierSync
+      actionName:
+        type: string
+        example: Name of dossierSync
+      actionUser:
+        type: string
+        example: action of user process
+      actionNote:
+        type: string
+        example: note of process action
+      syncType:
+        type: integer
+        format: int32
+        example: 0
+      payload:
+        type: string
+        example: payload info
+# Parameter declare
+parameters:
+  id:
+    name: id
+    in: path
+    type: string
+    required: true
+    description: id or code of DocumentType
+  typeCode:
+    name: typeCode
+    in: path
+    type: string
+    required: true
+    description: typeCode of Document
+  model:
+    name: model
+    in: query
+    type: integer
+    format: int32
+    required: true
+    description: model in syncs service
+  action:
+    name: action
+    in: query
+    type: string
+    description: filter follow code of action
+  top:
+    name: top
+    in: query
+    type: string
+    description: filter list user process
+  keyword:
+    name: keyword
+    in: query
+    type: string
+    description: key search
+  start:
+    name: start
+    in: query
+    type: integer
+    format: int32
+    description: Record start
+  end:
+    name: end
+    in: query
+    type: integer
+    format: int32
+    description: Record end
+  sort:
+    name: sort
+    in: query
+    type: string
+    description: field sort
+  order:
+    name: order
+    in: query
+    type: string
+    description: field order
 # Added by API Auto Mocking Plugin
 host: virtserver.swaggerhub.com
 basePath: /binhthgc/opencps/1.0.0
