--- a/modules/swagger-generate/src/main/resources/opencps.yaml
+++ b/modules/swagger-generate/src/main/resources/opencps.yaml
@@ -645,6 +645,8 @@ paths:
       - application/xml
       parameters:
         - $ref: '#/parameters/id'
+        - $ref: '#/parameters/start'
+        - $ref: '#/parameters/end'
       responses:
         200:
           description: List info Document by dossierId
@@ -652,12 +654,38 @@ paths:
             $ref: '#/definitions/DossierDocumentResultModel'
         400:
           description: DossierDocument has not data
+    post:
+      tags:
+      - DossierDocuments
+      summary: create dossier documents of dossierId
+      operationId: createDossierDoc
+      description: create dossier documents of dossierId
+      consumes:
+      - application/json
+      - application/xml
+      - multipart/form-data
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+        - $ref: '#/parameters/id'
+        - $ref: '#/parameters/upfile'
+        - $ref: '#/parameters/documentType'
+        - $ref: '#/parameters/documentName'
+        - $ref: '#/parameters/documentCode'
+      responses:
+        200:
+          description: List info Document by dossierId
+          schema:
+            $ref: '#/definitions/DossierDocumentModel'
+        400:
+          description: DossierDocument has not data
   /dossiers/{id}/documents/{typeCode}:
     get:
       tags:
       - DossierDocuments
       summary: Download file document by typeCode
-      operationId: downloadDocumentByTypeCode
+      operationId: downloadDocByTypeCode
       description: Download file document by typeCode
       consumes:
       - applicantion/json
@@ -1029,7 +1057,7 @@ definitions:
     properties:
       total:
         type: integer
-        format: int64
+        format: int32
         example: 0
       data:
         type: array
@@ -1075,7 +1103,7 @@ definitions:
         example: 0
       fileSize:
         type: integer
-        format: int32
+        format: int64
         example: 10
       fileType:
         type: string
@@ -1202,6 +1230,26 @@ parameters:
     in: query
     type: string
     description: field order
+  upfile:
+    name: upfile
+    in: formData 
+    type: file
+    description: The file to upload
+  documentType:
+    name: documentType
+    in: formData 
+    type: string
+    description: type of document
+  documentName:
+    name: documentName
+    in: formData 
+    type: string
+    description: Name of document
+  documentCode:
+    name: documentCode
+    in: formData 
+    type: string
+    description: Code of document
 # Added by API Auto Mocking Plugin
 host: virtserver.swaggerhub.com
 basePath: /binhthgc/opencps/1.0.0
