--- a/modules/swagger-generate/src/main/resources/opencps.yaml
+++ b/modules/swagger-generate/src/main/resources/opencps.yaml
@@ -25,6 +25,8 @@ tags:
   description: API process DossierDocuments
 - name: DossierSync
   description: API process DossierSync
+- name: DossierStatistic
+  description: API process DossierStatistic
 
 paths:
   /actionconfigs:
@@ -669,10 +671,22 @@ paths:
       - application/xml
       parameters:
         - $ref: '#/parameters/id'
-        - $ref: '#/parameters/upfile'
-        - $ref: '#/parameters/documentType'
-        - $ref: '#/parameters/documentName'
-        - $ref: '#/parameters/documentCode'
+        - name: upfile
+          in: formData 
+          type: file
+          description: The file to upload
+        - name: documentType
+          in: formData 
+          type: string
+          description: type of document
+        - name: documentName
+          in: formData 
+          type: string
+          description: Name of document
+        - name: documentCode
+          in: formData 
+          type: string
+          description: Code of document
       responses:
         200:
           description: List info Document by dossierId
@@ -750,6 +764,27 @@ paths:
           description: Get list dossierSync is success
           schema:
             $ref: '#/definitions/DossierSyncResultModel'
+        400:
+          description: Get list dossierSync is not success
+# List API DossierStatistic
+  /statistics/dossiers/todoTest:
+    get:
+      tags:
+      - DossierStatistic
+      summary: Get list all DossierStatistic
+      operationId: getDossierTodoTest
+      description: Get list all DossierStatistic
+      consumes:
+      - applicantion/json
+      - applicantion/xml
+      produces:
+      - applicantion/json
+      - applicantion/xml
+      responses:
+        200:
+          description: Get list dossierSync is success
+          schema:
+            $ref: '#/definitions/DossierStatisticResultModel'
         400:
           description: Get list dossierSync is not success
 # Define model
@@ -1175,6 +1210,41 @@ definitions:
       payload:
         type: string
         example: payload info
+# DossierStatistic Model
+  DossierStatisticResultModel:
+    type: object
+    required:
+    - total
+    properties:
+      total:
+        type: integer
+        format: int32
+        example: 0
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/DossierStatisticModel'
+  DossierStatisticModel:
+    type: object
+    required:
+    - stepCode
+    properties:
+      stepCode:
+        type: string
+        example: stepCode of stepConfig
+      stepName:
+        type: string
+        example: referenceUid of dossierSync
+      dossierStatus:
+        type: string
+        example: code of dossierSync
+      dossierSubStatus:
+        type: string
+        example: Name of dossierSync
+      totalCount:
+        type: integer
+        format: int64
+        example: action of user process
 # Parameter declare
 parameters:
   id:
@@ -1233,26 +1303,6 @@ parameters:
     in: query
     type: string
     description: field order
-  upfile:
-    name: upfile
-    in: formData 
-    type: file
-    description: The file to upload
-  documentType:
-    name: documentType
-    in: formData 
-    type: string
-    description: type of document
-  documentName:
-    name: documentName
-    in: formData 
-    type: string
-    description: Name of document
-  documentCode:
-    name: documentCode
-    in: formData 
-    type: string
-    description: Code of document
 # Added by API Auto Mocking Plugin
 host: virtserver.swaggerhub.com
 basePath: /binhthgc/opencps/1.0.0
