--- a/modules/backend-api-rest-v2-1/build.gradle
+++ b/modules/backend-api-rest-v2-1/build.gradle
@@ -14,6 +14,13 @@ dependencies {
 	compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.0.3'
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
+	compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
+	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.1'
+	compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.3.1'
+	compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.1'
+    compile group: 'commons-io', name: 'commons-io', version: '2.0.1'	
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
+    
 	compileOnly project(":modules:swagger-generate")
 	
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
