--- a/modules/frontend-web-customer-bvh/src/main/resources/content/Language.properties
+++ b/modules/frontend-web-customer-bvh/src/main/resources/content/Language.properties
@@ -1,5 +1,5 @@
-javax.portlet.display-name.frontend-web-customer-bvh=frontend-web-customer-bvh FreeMarker
-javax.portlet.keywords.frontend-web-customer-bvh=frontend-web-customer-bvh,ftl
-javax.portlet.short-title.frontend-web-customer-bvh=frontend-web-customer-bvh FreeMarker
-javax.portlet.title.frontend-web-customer-bvh=frontend-web-customer-bvh FreeMarker Portlet
-frontend-web-customer-bvh.caption=Hello from frontend-web-customer-bvh FreeMarker!
+javax.portlet.display-name.frontend-web-customer=frontend-web-customer FreeMarker
+javax.portlet.keywords.frontend-web-customer=frontend-web-customer,ftl
+javax.portlet.short-title.frontend-web-customer=frontend-web-customer FreeMarker
+javax.portlet.title.frontend-web-customer=frontend-web-customer FreeMarker Portlet
+frontend-web-customer.caption=Hello from frontend-web-customer FreeMarker!
