--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -7,6 +7,13 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.0.1"
 
+	compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
+	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.1'
+	compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.3.1'
+	compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.1'
+    compile group: 'commons-io', name: 'commons-io', version: '2.0.1'	
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
+    
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
 	compileOnly project(":modules:backend-datamgt:backend-datamgt-api")
 	compileOnly project(":modules:backend-communication:backend-communication-api")
