commit front end one-gate

--- a/modules/swagger-generate/src/main/resources/opencps.yaml
+++ b/modules/swagger-generate/src/main/resources/opencps.yaml
@@ -953,6 +953,10 @@ definitions:
       menuStepName:
         type: string
         example: 'step name 001'
+      dossierStatus:
+        type: string
+      dossierSubStatus:
+        type: string
       buttonConfig:
         type: string
         example: 'step name 001'
