--- a/modules/backend-statistic/pom.xml
+++ b/modules/backend-statistic/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.opencps.statistic</groupId>
@@ -12,7 +11,8 @@
 		<module>opencps-statistic-rest</module>
         <module>opencps-statistic-service</module>
         <module>opencps-statistic-common</module>
-    </modules>
+    <module>sample.rest.maven</module>
+  </modules>
     
     <profiles>
     	<profile>
