--- a/modules/backend-statistic/opencps-statistic-rest/pom.xml
+++ b/modules/backend-statistic/opencps-statistic-rest/pom.xml
@@ -6,10 +6,18 @@
 	<groupId>org.opencps.statistic.rest</groupId>
 	<artifactId>opencps-statistic-rest</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<!-- spring versions -->
+		<spring-boot.version>1.5.6.RELEASE</spring-boot.version>
+		<spring-cloud-services.version>1.4.1.RELEASE</spring-cloud-services.version>
+
 	</properties>
+
 	<dependencies>
+
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
@@ -50,6 +58,7 @@
 					</archive>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>biz.aQute.bnd</groupId>
 				<artifactId>bnd-maven-plugin</artifactId>
