Update menu config API

--- a/modules/backend-api-rest-v2-1/build.gradle
+++ b/modules/backend-api-rest-v2-1/build.gradle
@@ -25,5 +25,9 @@ dependencies {
 	
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
+
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
+
 	compileOnly project(":modules:backend-auth")
 }
