--- a/modules/backend-statistic/opencps-statistic-rest/pom.xml
+++ b/modules/backend-statistic/opencps-statistic-rest/pom.xml
@@ -17,7 +17,19 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>com.liferay.portal</groupId>
+			<artifactId>com.liferay.portal.kernel</artifactId>
+			<version>2.6.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-core</artifactId>
+		    <version>5.0.7.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
@@ -34,6 +46,16 @@
 		<dependency>
 			<groupId>opencps.statistic.common</groupId>
 			<artifactId>opencps-statistic-common</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.opencps.statistic</groupId>
+			<artifactId>opencps-statistic-service-api</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.opencps.statistic</groupId>
+			<artifactId>opencps-statistic-service-service</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
