--- a/modules/backend-statistic/opencps-statistic-service/opencps-statistic-service-api/pom.xml
+++ b/modules/backend-statistic/opencps-statistic-service/opencps-statistic-service-api/pom.xml
@@ -15,6 +15,18 @@
 	</parent>
 	<dependencies>
 		<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>com.liferay.portal.spring.extender</artifactId>
+			<version>2.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>com.liferay.osgi.service.tracker.collections</artifactId>
+			<version>2.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 			<version>6.0.0</version>
