Update engine for dossier

--- a/modules/backend-statistic/opencps-statistic-rest/pom.xml
+++ b/modules/backend-statistic/opencps-statistic-rest/pom.xml
@@ -24,6 +24,12 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>biz.aQute.bnd</groupId>
+			<artifactId>biz.aQute.bnd.annotation</artifactId>
+			<version>3.2.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
