--- a/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
@@ -1,1 +1,10 @@
+##GovAgency
 opencps.rest.enpoind.govagency = http://127.0.0.1:8080/o/rest/v2/dictcollections/GOVERNMENT_AGENCY/dictitems
+
+##Dossier
+
+opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/v2/dossiers
+
+#Common
+opencps.rest.authentication = dGVzdEBsaWZlcmF5LmNvbTp0ZXN0
+
