Update mapping action in v2-1 API

--- a/modules/swagger-generate/src/main/resources/opencps.yaml
+++ b/modules/swagger-generate/src/main/resources/opencps.yaml
@@ -879,6 +879,9 @@ definitions:
       userNote:
         type: integer
         example: 0
+      mappingAction:
+        type: string
+        example: "1200"        
   StepConfigItemResult:
     type: object
     required:
