--- a/modules/backend-statistic/opencps-statistic-common/pom.xml
+++ b/modules/backend-statistic/opencps-statistic-common/pom.xml
@@ -81,7 +81,20 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
+          <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>install</phase>
+                <goals>
+                  <goal>copy-dependencies</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
