--- a/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
@@ -3,8 +3,12 @@ opencps.rest.enpoind.govagency = http://127.0.0.1:8080/o/rest/v2/dictcollections
 
 ##Dossier
 
-opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/v2/dossiers
+opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/statistics/dossiers
 
 #Common
 opencps.rest.authentication = dGVzdEBsaWZlcmF5LmNvbTp0ZXN0
+
+#GroupId
+
+opencps.group.id.config = 391920
 
