--- a/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
+++ b/modules/backend-statistic/opencps-statistic-rest/src/main/resources/dossierconfig.properties
@@ -5,6 +5,9 @@ opencps.rest.enpoind.govagency = http://127.0.0.1:8080/o/rest/v2/dictcollections
 
 opencps.rest.enpoind.dossier = http://127.0.0.1:8080/o/rest/statistics/dossiers
 
+#ServiceInfo
+opencps.rest.enpoint.service.info = http://127.0.0.1:8080/o/rest/v2/serviceinfos
+
 #Common
 opencps.rest.authentication = dGVzdEBsaWZlcmF5LmNvbTp0ZXN0
 
